--- a/public/styles.css
+++ b/public/styles.css
@@ -54,3 +54,37 @@ footer p {
   white-space: pre-wrap;
   word-wrap: break-word;
 }
+
+.card {
+  display: flex;
+  flex-direction: column;
+  width: 400px;
+  background-color: #e9d4e0;
+  border-radius: 7px;
+  box-shadow: 0 2px 5px #ccc;
+  padding: 10px;
+  margin: 16px;
+  float: left;
+  position: relative;
+  text-align: left;
+}
+
+.card h1 {
+  background: #c3a3d5;
+  margin-bottom: 10px;
+  width: 100%;
+  text-align: center;
+  border-radius: 10px;
+}
+
+.circle-img{
+  border-radius: 50%;
+  border: 7px solid rgb(238, 232, 238);
+  width: 200px;
+  height: 200px;
+  align-self: flex-end;
+}
+
+.card p { 
+  margin-top: 2px;
+}
